[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/Ennemies/Wheel.png" type="Texture" id=1]
[ext_resource path="res://Wheel.gd" type="Script" id=2]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=3]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 40, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 80, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 120, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 200, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 240, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 280, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 320, 0, 40, 40 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "Move",
"speed": 12.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "Die",
"speed": 8.0
} ]

[sub_resource type="CircleShape2D" id=11]
radius = 17.168

[sub_resource type="CircleShape2D" id=12]
radius = 19.2487

[sub_resource type="CircleShape2D" id=13]
radius = 483.853

[node name="Wheel" type="KinematicBody2D"]
scale = Vector2( 1.5, 1.5 )
collision_layer = 8
collision_mask = 129
collision/safe_margin = 0.008
script = ExtResource( 2 )
speed = -150
gravity = 25

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 10 )
animation = "Move"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 0 )
shape = SubResource( 11 )

[node name="HurtBox" type="Area2D" parent="."]
position = Vector2( 1, 0 )
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( -0.0991008, 0 )
shape = SubResource( 12 )

[node name="DeathTimer" type="Timer" parent="."]

[node name="DetectionZone" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionZone"]
shape = SubResource( 13 )

[node name="Stats" parent="." instance=ExtResource( 3 )]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
[connection signal="body_entered" from="DetectionZone" to="." method="_on_DetectionZone_body_entered"]
[connection signal="zero_health" from="Stats" to="." method="_on_Stats_zero_health"]
